--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Type: Package
 Title: LDsnpR - SNP-based gene scoring using LD data
 Version: 1.0.1
 Date: 2015-06-04
-Author: Andrea Christoforou, Michael Dondrup
-Maintainer: Michael Dondrup <Michael.Dondrup@uni.no> with contributions from Tatiana Polushina <Tatiana.Polushina@k2.uib.no>
+Author: Andrea Christoforou, Michael Dondrup, Tatiana POlushina
+Maintainer: Michael Dondrup <Michael.Dondrup@uni.no>, Tatiana Polushina <Tatiana.Polushina@k2.uib.no>
 Description: LDsnpR is  a flexible  open-source R-package, which efficiently assigns SNPs to genes, or user-defined bins, based both on their physical position and on their pairwise LD with other SNPs. Then, gene-specific scores are computed as combined scores from the SNP-pvalues.
 Depends: IRanges (>= 1.14.0), rhdf5 (>= 2.12.0), fastmatch (>= 1.0.0)
 License: FreeBSD
